--- a/BBapp/templates/base.html
+++ b/BBapp/templates/base.html
@@ -1,6 +1,7 @@
+<!-- Base html file use only for elements we want on every page. (e.g. navigation bar, timestamps...) -->
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}ByteBenevolence{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -13,11 +14,14 @@
                 <span class="icon-bar"></span> 
                 <span class="icon-bar"></span> 
             </button>
-            <a class="navbar-brand" href="/">Flasky</a>
+            <a class="navbar-brand" href="/">ByteBenevolence</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li> 
+                <li><a href="/login">Login</a></li> 
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/user">Dashboard</a></li> 
             </ul>
         </div>
    </div>
