--- a/BBapp/templates/user.html
+++ b/BBapp/templates/user.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}User{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
-        <h1>Hello, {{ name }}!</h1>
+        {% if logged_in %}
+        <h1>Successfully logged in as, {{ email }}!</h1>
+        {% else %}
+        <h1>Please log in first.</h1>
+        {% endif %}
     </div>
 {% endblock %}
 
