--- a/BBapp/static/calendar_assets/style.css
+++ b/BBapp/static/calendar_assets/style.css
@@ -1,100 +1,355 @@
+*, *:before, *:after {
+-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-*{
+body {
+ overflow: hidden;
+ font-family: 'Arial';
+ font-weight: 100;
+ color: rgba(255, 255, 255, 1);
+ margin: 0;
+ padding: 0;
+ background: #FFFFFF;
+}
+
+username {
+    font-weight: bold;
+    color: #444;
+}
+
+#calendar {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  width: 630px;
+  margin: 0 auto;
+  height: 570px;
+  overflow: hidden;
+}
+
+.header {
+  height: 60px;
+  width: 630px;
+  background: rgba(150, 150, 150, 1);
+  text-align: center;
+  position:relative;
+  z-index: 100;
+}
+
+.header h1 {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  line-height: 50px;
+  font-weight: 100;
+  letter-spacing: 1px;
 }
 
-
-.wrapper{
-  width: 800px;
-  margin: 0 auto;
-  align-items: center;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.12);
-}
-.wrapper header{
-  display: flex;
-  align-items: center;
-  padding: 25px 30px 10px;
-  justify-content: space-between;
-}
-header .icons{
-  display: flex;
-}
-header .icons span{
-  height: 38px;
-  width: 38px;
-  margin: 0 1px;
-  cursor: pointer;
-  color: #878787;
-  text-align: center;
-  line-height: 38px;
-  font-size: 1.9rem;
-  user-select: none;
-  border-radius: 50%;
-}
-.icons span:last-child{
-  margin-right: -10px;
-}
-header .icons span:hover{
-  background: #f2f2f2;
-}
-header .current-date{
-  font-size: 1.45rem;
-  font-weight: 500;
-}
-.calendar{
-  padding: 20px;
-}
-.calendar ul{
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  text-align: center;
-}
-.calendar .days{
-  margin-bottom: 20px;
-}
-.calendar li{
-  color: #333;
-  width: calc(100% / 7);
-  font-size: 1.07rem;
-}
-.calendar .weeks li{
-  font-weight: 500;
-  cursor: default;
-}
-.calendar .days li{
-  z-index: 1;
-  cursor: pointer;
-  position: relative;
-  margin-top: 30px;
-}
-.days li.inactive{
-  color: #aaa;
-}
-.days li.active{
-  color: #fff;
-}
-.days li::before{
+.left, .right {
   position: absolute;
-  content: "";
-  left: 50%;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
   top: 50%;
-  height: 40px;
-  width: 40px;
-  z-index: -1;
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
+  margin-top: -7.5px;
+  cursor: pointer;
 }
 
-.days li:not(.active):hover::before{
-  background: #f2f2f2;
+.left {
+  border-width: 7.5px 10px 7.5px 0;
+  border-color: transparent rgba(200, 199, 200, 1) transparent transparent;
+  right: 50px;
 }
-.days li.active::before{
-  background: #880808;
+
+.right {
+  border-width: 7.5px 0 7.5px 10px;
+  border-color: transparent transparent transparent rgba(200, 199, 200, 1);
+  right: 20px;
 }
+
+.month {
+  /*overflow: hidden;*/
+  opacity: 0;
+}
+
+.month.new {
+  -webkit-animation: fadeIn 1s ease-out;
+  opacity: 1;
+}
+
+.month.in.next {
+  -webkit-animation: MonthFadeDownNext .4s ease-out;
+  -moz-animation: MonthFadeDownNext .4s ease-out;
+  animation: MonthFadeDownNext .4s ease-out;
+  opacity: 1;
+}
+
+.month.out.next {
+  -webkit-animation: MonthFadeUpNext .4s ease-in;
+  -moz-animation: MonthFadeUpNext .4s ease-in;
+  animation: MonthFadeUpNext .4s ease-in;
+  opacity: 1;
+}
+
+.month.in.prev {
+  -webkit-animation: MonthFadeUpPrevious .4s ease-out;
+  -moz-animation: MonthFadeUpPrevious .4s ease-out;
+  animation: MonthFadeUpPrevious .4s ease-out;
+  opacity: 1;
+}
+
+.month.out.prev {
+  -webkit-animation: MonthFadeDownPrevious .4s ease-in;
+  -moz-animation: MonthFadeDownPrevious .4s ease-in;
+  animation: MonthFadeDownPrevious .4s ease-in;
+  opacity: 1;
+}
+
+.week {
+ background: #4A4A4A;
+}
+
+.day {
+  display: inline-block;
+  width: 90px;
+  padding: 10px;
+  text-align: center;
+  vertical-align: top;
+  cursor: pointer;
+  background: #333333;
+  position: relative;
+  z-index: 100;
+}
+
+.day.other {
+ color: rgba(255, 255, 255, .3);
+}
+
+.day.today {
+  color: rgba(255, 52, 20, 1);
+}
+
+.day-name {
+  font-size: 9px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  color: rgba(255, 255, 255, .5);
+  letter-spacing: .7px;
+}
+
+.day-number {
+  font-size: 36px;
+  letter-spacing: 2.5px;
+}
+
+
+.day .day-events {
+  list-style: none;
+  margin-top: 3px;
+  text-align: center;
+  height: 12px;
+  line-height: 6px;
+  overflow: hidden;
+}
+
+.day .day-events span {
+  vertical-align: top;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  width: 5px;
+  height: 5px;
+  line-height: 5px;
+  margin: 0 1px;
+}
+
+.orange { background: rgba(247, 167, 0, 1); }
+.green { background: rgba(153, 198, 109, 1); }
+
+.details {
+  position: relative;
+  width: 630px;
+  height: 75px;
+  background: rgba(164, 164, 164, 1);
+  margin-top: 5px;
+  border-radius: 4px;
+}
+
+.details.in {
+  -webkit-animation: moveFromTopFade .5s ease both;
+  -moz-animation: moveFromTopFade .5s ease both;
+  animation: moveFromTopFade .5s ease both;
+}
+
+.details.out {
+  -webkit-animation: moveToTopFade .5s ease both;
+  -moz-animation: moveToTopFade .5s ease both;
+  animation: moveToTopFade .5s ease both;
+}
+
+
+.events {
+  height: 75px;
+  padding: 7px 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.events.in {
+  -webkit-animation: fadeIn .3s ease both;
+  -moz-animation: fadeIn .3s ease both;
+  animation: fadeIn .3s ease both;
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  animation-delay: .3s;
+}
+
+.details.out .events {
+  -webkit-animation: FadeOut .4s ease both;
+  -moz-animation: FadeOut .4s ease both;
+  animation: FadeOut .4s ease both;
+}
+
+.events.out {
+  -webkit-animation: fadeOut .3s ease both;
+  -moz-animation: fadeOut .3s ease both;
+  animation: fadeOut .3s ease both;
+}
+
+.event {
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: .5px;
+  padding: 2px 16px;
+  vertical-align: top;
+}
+
+.event.empty {
+  color: #333333;
+}
+
+.event-category {
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  margin: 6px 0 0;
+  vertical-align: top;
+}
+
+.event span {
+  display: inline-block;
+  padding: 0 0 0 7px;
+}
+
+
+.entry {
+  position: relative;
+  padding: 0 0 0 25px;
+  font-size: 13px;
+  display: inline-block;
+  line-height: 30px;
+  background: transparent;
+}
+
+.entry:after {
+  position: absolute;
+  content: '';
+  height: 5px;
+  width: 5px;
+  top: 12px;
+  left: 14px;
+}
+
+.entry.orange:after { background: rgba(247, 167, 0, 1); }
+.entry.green:after { background: rgba(153, 198, 109, 1); }
+
+@-webkit-keyframes moveFromTopFade {
+  from { opacity: .3; height:0px; margin-top:0px; -webkit-transform: translateY(-100%); }
+}
+@-moz-keyframes moveFromTopFade {
+  from { height:0px; margin-top:0px; -moz-transform: translateY(-100%); }
+}
+@keyframes moveFromTopFade {
+  from { height:0px; margin-top:0px; transform: translateY(-100%); }
+}
+
+@-webkit-keyframes moveToTopFade {
+  to { opacity: .3; height:0px; margin-top:0px; opacity: 0.3; -webkit-transform: translateY(-100%); }
+}
+@-moz-keyframes moveToTopFade {
+  to { height:0px; -moz-transform: translateY(-100%); }
+}
+@keyframes moveToTopFade {
+  to { height:0px; transform: translateY(-100%); }
+}
+
+@-webkit-keyframes MonthFadeUpNext {
+  to { opacity: 0; -webkit-transform: translateY(-100%) scale(.95); }
+}
+@-moz-keyframes MonthFadeUpNext {
+  to { opacity: 0; -moz-transform: translateY(-100%); }
+}
+@keyframes MonthFadeUpNext {
+  to { opacity: 0; -moz-transform: translateY(-100%); }
+}
+
+@-webkit-keyframes MonthFadeDownNext {
+  from {opacity: 0; -webkit-transform: translateY(100%) scale(.95);}
+}
+@-moz-keyframes MonthFadeDownNext {
+  from {opacity: 0; -moz-transform: translateY(100%);}
+}
+@keyframes MonthFadeDownNext {
+  from {opacity: 0; -moz-transform: translateY(100%);}
+}
+
+@-webkit-keyframes MonthFadeDownPrevious {
+  to {opacity: 0; -webkit-transform: translateY(100%) scale(.95);}
+}
+@-moz-keyframes MonthFadeDownPrevious {
+  to {opacity: 0; -webkit-transform: translateY(100%);}
+}
+@keyframes MonthFadeDownPrevious {
+  to {opacity: 0; -webkit-transform: translateY(100%);}
+}
+
+@-webkit-keyframes MonthFadeUpPrevious {
+  from { opacity: 0; -webkit-transform: translateY(-100%) scale(.95);}
+}
+@-moz-keyframes MonthFadeUpPrevious {
+  from {opacity:0; -webkit-transform: translateY(-100%);}
+}
+@keyframes MonthFadeUpPrevious {
+  from {opacity:0; -webkit-transform: translateY(-100%);}
+}
+
+@-webkit-keyframes fadeIn  {
+  from {opacity:0;}
+}
+@-moz-keyframes fadeIn  {
+  from {opacity:0;}
+}
+@keyframes fadeIn  {
+  from {opacity:0;}
+}
+
+@-webkit-keyframes FadeOut  {
+  to {opacity:0;padding:0px;height:0px;}
+}
+@-moz-keyframes FadeOut  {
+  to {opacity:0;padding:0px;height:0px;}
+}
+@keyframes FadeOut  {
+  to {opacity:0;padding:0px;height:0px;}
+}
+
+@-webkit-keyframes fadeOut {
+  to {opacity:0;}
+}
+@-moz-keyframes fadeOut {
+  to {opacity:0;}
+}
+@keyframes fadeOut {
+  to {opacity:0;}
+}
+
