--- a/BBapp/static/calendar_assets/style.css
+++ b/BBapp/static/calendar_assets/style.css
@@ -159,6 +159,7 @@ username {
   margin: 0;
   width: 5px;
   height: 5px;
+  border-radius: 50%;
   line-height: 5px;
   margin: 0 1px;
 }
@@ -231,6 +232,7 @@ username {
 .event-category {
   height: 10px;
   width: 10px;
+  border-radius: 50%;
   display: inline-block;
   margin: 6px 0 0;
   vertical-align: top;
