--- a/BBapp/templates/calendar.html
+++ b/BBapp/templates/calendar.html
@@ -15,6 +15,6 @@
 
 
 <username>{{ email }}'s Calendar</username>
-<button id="theButton">test</button>
+<button id="theButton">test ajax </button>
 <div id="calendar"></div>
 {% endblock %}
